.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:49:28 **** Incremental Build of configuration Debug for project FriendClasses ****
make all 
make: Nothing to be done for 'all'.
15:49:30 **** Incremental Build of configuration Debug for project FriendClasses ****
make all 
make: Nothing to be done for 'all'.
15:49:32 **** Incremental Build of configuration Debug for project FriendClasses ****
make all 
make: Nothing to be done for 'all'.
15:49:33 **** Incremental Build of configuration Debug for project FriendClasses ****
make all 
make: Nothing to be done for 'all'.
15:50:14 **** Incremental Build of configuration Debug for project FriendClasses ****
make all 
Building file: ../src/Handle.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Handle.d" -MT"src/Handle.d" -o "src/Handle.o" "../src/Handle.cpp"
../src/Handle.cpp: In member function ‘void Handle::someOperationOnBody()’:
../src/Handle.cpp:28:53: error: found ‘:’ in nested-name-specifier, expected ‘::’
  std::cout << "Some Data: " << body->someData << std:endl;
                                                     ^
src/subdir.mk:24: recipe for target 'src/Handle.o' failed
make: *** [src/Handle.o] Error 1
15:50:30 **** Incremental Build of configuration Debug for project FriendClasses ****
make all 
Building file: ../src/Handle.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Handle.d" -MT"src/Handle.d" -o "src/Handle.o" "../src/Handle.cpp"
Finished building: ../src/Handle.cpp
 
Building target: FriendClasses
Invoking: Cross G++ Linker
g++  -o "FriendClasses"  ./src/Body.o ./src/FriendClasses.o ./src/Handle.o   
Finished building target: FriendClasses
 
